<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yahoo.ads.pb</groupId>
    <artifactId>pistachios</artifactId>
    <packaging>jar</packaging>
    <version>0.1.0.0</version>
    <name>pistachio</name>
    <description>Pistachios</description>
    <url></url>
	<properties>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
	</properties>



    <dependencies>
        <dependency>
			<groupId>org.rocksdb</groupId>
			<artifactId>rocksdbjni</artifactId>
			<version>3.6.2</version>
		</dependency>
    <dependency>
        <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
                <version>54.1.1</version>
                </dependency>

        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-x-discovery</artifactId>
            <version>2.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-core-asl</artifactId>
                    <version>1.9.13</version>
                    </dependency>
	<dependency>
		<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
				<version>4.0.24.Final</version>
				</dependency>
		<dependency>
	  <groupId>com.google.http-client</groupId>
	    <artifactId>google-http-client</artifactId>
		  <version>1.18.0-rc</version>
		  </dependency>
		<dependency>
			<groupId>com.codahale.metrics</groupId>
			<artifactId>metrics-core</artifactId>
			<version>3.0.2</version>
		</dependency>
        <!--
		<dependency>
			<groupId>com.sun.jdmk</groupId>
			<artifactId>jmxtools</artifactId>
			<version>1.2.1</version>
		</dependency>
        -->
		<dependency>
			<groupId>net.sourceforge.findbugs</groupId>
		    <artifactId>jsr305</artifactId>
			<version>1.3.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.helix</groupId>
			<artifactId>helix-core</artifactId>
			<version>0.6.4</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.zookeeper</groupId>
					<artifactId>zookeeper</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.7</version>
        </dependency>
		<dependency>
			<groupId>org.apache.thrift</groupId>
			<artifactId>libthrift</artifactId>
			<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka_2.10</artifactId>
			<version>0.8.0</version>
		</dependency>
		<dependency>
		<groupId>com.fallabs</groupId>
		<artifactId>kyotocabinet-java</artifactId>
		<version>1.24</version>
		</dependency>
		<!--
		<dependency>
		<groupId>com.googlecode.protobuf-java-format</groupId>
		<artifactId>protobuf-java-format</artifactId>
		<version>1.2</version>
		</dependency>
		-->
		<dependency>
		<groupId>com.google.protobuf</groupId>
		<artifactId>protobuf-java</artifactId>
		<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.esotericsoftware.kryo</groupId>
			<artifactId>kryo</artifactId>
			<version>2.24.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>3.4.5</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.5</version>
		</dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>5.14.7</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
		<sourceDirectory>./src</sourceDirectory>
        <finalName>pistachio</finalName>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <sourcepath>./src</sourcepath>
                </configuration>
                <executions>
                    <execution>
                        <id>javadocs</id>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
					<goals>
						<goal>jar</goal>
						<goal>test-jar</goal>
					</goals>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>${basedir}/lib</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
					<id>copy-dependencies</id>
					<phase>prepare-package</phase>
					<goals>
					<goal>copy-dependencies</goal>
					</goals>
					<configuration>
					<excludeArtifactIds>slf4j-simple</excludeArtifactIds>
					<outputDirectory>${basedir}/lib</outputDirectory>
					<overWriteReleases>false</overWriteReleases>
					<overWriteSnapshots>false</overWriteSnapshots>
					<overWriteIfNewer>true</overWriteIfNewer>
					</configuration>
					</execution>		
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>

				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
					<excludes>
						<exclude>**/gen-java/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
			</plugin>
            <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.5.3</version>
                    <configuration>
                      <descriptor>src/main/assembly/assembly.xml</descriptor>
                      <tarLongFileMode>posix</tarLongFileMode>
                    </configuration>
                    <executions>
                      <execution>
                        <id>create-archive</id>
                        <phase>package</phase>
                        <goals>
                          <goal>single</goal>
                        </goals>
                      </execution>
                    </executions>
            </plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/classes</outputDirectory>
							<includeEmptyDirs>true</includeEmptyDirs>
							<resources>
								<resource>
									<directory>${basedir}/resources</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
    </build>
</project>
